--- a/style.css
+++ b/style.css
@@ -24,6 +24,33 @@ img{
     display: flex;
     padding: 6rem 4rem;
     justify-content: center;
-
+    align-items: center;
+    gap: 30px;
+    text-align: start;
+    vertical-align: baseline;
+    
 }
 
+
+
+
+.text-image-section:nth-child(odd){
+    flex-direction: row-reverse;
+}
+.text-image-section:nth-child(even){
+    background-color: whitesmoke;
+}
+.text-image-section:last-child{
+    background-color: whitesmoke;
+}
+
+.big{
+    display: inline-flex;
+    font-size: 16px;
+    padding: 20px 50px;
+    border: none;
+    border-radius: 40%;
+    color: white;
+    background-color: #474fec;
+    margin: 8px 50px;
+}
