--- a/style.css
+++ b/style.css
@@ -9,6 +9,8 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    text-decoration: none;
+    list-style-type: none;
 }
 
 img{
@@ -24,6 +26,99 @@ img{
     display: flex;
     padding: 8rem 15rem;
     justify-content: center;
-
+    align-items: center;
+    gap: 1rem;
+    text-align: start;
+    text-size-adjust: 40px;
+    
+}
+.text-image-section:nth-child(odd){
+    flex-direction: row-reverse;
+}
+.text-image-section:nth-child(even){
+    background-color: whitesmoke;
+}
+.text-image-section:last-child{
+    background-color: whitesmoke;
+    font-size: 30px;
+}
+.text-image-section:nth-child(4){
+    display: block;
 }
 
+
+
+.big{
+    display: flex;
+    align-items: center;
+    position: absolute;
+    border: none;
+    border-radius: 10px;
+    width: 10rem;
+    color: #fff;
+    background-color: #474fec;
+    background-image: url(./img/download.svg);
+    background-repeat: no-repeat;
+    background-position: flex-start;
+}
+
+/*elemento footer*/
+#article-footer{
+    display: block;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    background-color: rgb(36, 40, 46);
+    padding: 2rem 2rem;
+}
+
+
+#select-language{
+    background: none;
+    border: none;
+    color: #fff;
+    font-size: 18px;
+}
+
+#select-language, #social{
+    display: flex;
+    justify-content: flex-start;
+    margin-top: 25px;
+    column-width: 20px;
+}
+
+#select-language{
+    width: 100px; 
+}
+
+#social> img{
+    display: block; 
+    padding: 12px;
+    align-content: space-evenly;
+}
+
+
+nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: end;
+    
+    gap: 6rem;
+    font-size: 13px;  
+}
+#final-part{
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    border-top: 1px solid #474fec;
+    padding: 30px 20px ;
+}
+#final-part> button{
+    display: flex;
+    border: none;
+    border-radius: 10px;
+
+    color: #fff;
+    background-color: #474fec;
+    font-size: 15px;
+}
